# OpenGL

./: .gitignore  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp  simpletreangle.cpp  simpletreangle.h
